Problems have been found with the following capture file:https://www.wireshark.org/download/automated/captures/fuzz-2014-12-25-17219.pcapstderr:Input file: /home/wireshark/menagerie/menagerie/13224-bad_frame_1.pcapBuild host information:Linux wsbb04 3.13.0-39-generic #66-Ubuntu SMP Tue Oct 28 13:30:27 UTC 2014 x86_64 x86_64 x86_64 GNU/LinuxDistributor ID: UbuntuDescription: Ubuntu 14.04.1 LTSRelease: 14.04Codename: trustyBuildbot information:BUILDBOT_REPOSITORY=ssh://wireshark-buildbot@code.wireshark.org:29418/wiresharkBUILDBOT_BUILDNUMBER=3086BUILDBOT_URL=http://buildbot.wireshark.org/trunk/BUILDBOT_BUILDERNAME=Clang Code AnalysisBUILDBOT_SLAVENAME=clang-code-analysisBUILDBOT_GOT_REVISION=9d7709e7b7681a86efb270f0a7ff02c4c4010988Return value: 0Dissector bug: 0Valgrind error count: 80Git commitcommit 9d7709e7b7681a86efb270f0a7ff02c4c4010988Author: Martin Mathieson <martin.r.mathieson@googlemail.com>Date: Tue Dec 23 15:15:15 2014 +0000 Restore prefs.h for ipv6 too Change-Id: Ibdc7098532c1aff7ec6135b8e4460056049f9089 Reviewed-on: https://code.wireshark.org/review/6020 Reviewed-by: Martin Mathieson <martin.r.mathieson@googlemail.com>Command and args: ./tools/valgrind-wireshark.sh -T==11031== Memcheck, a memory error detector==11031== Copyright (C) 2002-2013, and GNU GPL'd, by Julian Seward et al.==11031== Using Valgrind-3.10.0.SVN and LibVEX; rerun with -h for copyright info==11031== Command: /home/wireshark/builders/wireshark-master-fuzz/clangcodeanalysis/install/bin/tshark -Vx -nr /fuzz/buildbot/clangcodeanalysis/valgrind-fuzz/fuzz-2014-12-25-17219.pcap==11031====11031== Conditional jump or move depends on uninitialised value(s)==11031== at 0x66B5B06: ip6_to_str_buf_len (address_to_str.c:177)==11031== by 0x6E41207: wccp_fmt_ipadddress (packet-wccp.c:643)==11031== by 0x66DCA1A: fill_label_number (proto.c:6291)==11031== by 0x66E5850: proto_item_fill_label (proto.c:5977)==11031== by 0x66D79ED: proto_tree_print_node (print.c:147)==11031== by 0x66DABCB: proto_tree_children_foreach (proto.c:635)==11031== by 0x66D78AD: proto_tree_print_node (print.c:202)==11031== by 0x66DABCB: proto_tree_children_foreach (proto.c:635)==11031== by 0x66D78AD: proto_tree_print_node (print.c:202)==11031== by 0x66DABCB: proto_tree_children_foreach (proto.c:635)==11031== by 0x66D853A: proto_tree_print (print.c:116)==11031== by 0x41320A: print_packet (tshark.c:3988)==11031====11031====11031== HEAP SUMMARY:==11031== in use at exit: 1,218,466 bytes in 29,724 blocks==11031== total heap usage: 224,923 allocs, 195,199 frees, 28,684,868 bytes allocated==11031====11031== LEAK SUMMARY:==11031== definitely lost: 3,656 bytes in 156 blocks==11031== indirectly lost: 36,744 bytes in 51 blocks==11031== possibly lost: 0 bytes in 0 blocks==11031== still reachable: 1,178,066 bytes in 29,517 blocks==11031== suppressed: 0 bytes in 0 blocks==11031== Rerun with --leak-check=full to see details of leaked memory==11031====11031== For counts of detected and suppressed errors, rerun with: -v==11031== Use --track-origins=yes to see where uninitialised values come from==11031== ERROR SUMMARY: 80 errors from 1 contexts (suppressed: 0 from 0)[ no debug trace ]