WCCP: initialize address table to 0

It prevents an uninitialized access later on if an exception is triggered before filling the table

Bug: 10806
Change-Id: I8f75fb18cd8d033013c34093f9d6c8762f23452b
Reviewed-on: https://code.wireshark.org/review/6056
Reviewed-by: Pascal Quantin <pascal.quantin@gmail.com>